# rust-web

./: .prettierrc.json  Cargo.toml
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  session.rs  user.rs  user_profile.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_create_user_table.rs  m20240212_003118_create_session_table.rs  m20240214_180047_create_profile_table.rs
src/: app.rs  auth.rs  database.rs  layout.rs  main.rs  password.rs  templates.rs  user.rs
src/auth/: database.rs  db_session_store.rs  layer.rs  login_page.rs  login_routes.rs  mod.rs  password.rs  register_page.rs  register_routes.rs  router.rs  session.rs
src/layout/: layout_middleware.rs  messages.rs  navbar.rs  page.rs  page_template.rs  template_response.rs
src/routes/: mod.rs  user_login.rs  user_register.rs
src/services/: auth_service.rs  user_service.rs
src/user/: db_user_profile.rs  profile_page.rs  router.rs
templates/: index.hbs  navbar.hbs
templates/auth/: login.hbs  register.hbs
templates/form/: error.hbs
templates/layout/: messages.hbs  navbar.hbs  page.hbs  page_header.hbs  style.hbs
templates/user/: login.hbs  profile.hbs  register.hbs
