[workspace]
members = [".", "entity", "migration"]

[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = "0.7.4"
dotenvy = "0.15.7"
handlebars = { version = "5.1.0", features = ["dir_source"] }
sea-orm = { version = "0.12.14", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
validator = { version = "0.16.1", features = ["derive"] }
argon2 = "0.5.3"
rand = "0.8.5"
thiserror = "1.0.56"
axum-login = "0.13.1"
tower-sessions = "0.10.2"
async-trait = "0.1.77"
axum-messages = "0.3.0"
